# sysyf

./: .gitignore  README.md  pyproject.toml  test.py
cpp/: .clang-format  .clang-tidy  CMakeLists.txt
cpp/grammar/: SysYF.g4
cpp/include/ANTLRRuntime/: RuleContext.h
cpp/include/AST/: AST.h  ASTBuilder.h  ASTPrinter.h  ASTVisitor.hpp
cpp/include/IR/: BasicBlock.h  Constant.h  Function.h  GlobalVariable.h  IRBuilder.h  InstBuilder.h  Instruction.h  Module.h  Type.h  Value.h
cpp/include/Parser/: SysYFBaseVisitor.h  SysYFLexer.h  SysYFParser.h  SysYFVisitor.h
cpp/include/Support/: Box.hpp  Debug.hpp  TypeAlias.h  Union.hpp  Utils.hpp  cxxopts.hpp
cpp/src/: main.cpp
cpp/src/ANTLRRuntime/: CMakeLists.txt
cpp/src/ANTLRRuntime/atn/: PredictionContext.cpp
cpp/src/ANTLRRuntime/tree/xpath/: XPathLexer.cpp
cpp/src/AST/: AST.cpp  ASTBuilder.cpp  ASTPrinter.cpp  CMakeLists.txt
cpp/src/IR/: BasicBlock.cpp  CMakeLists.txt  Contant.cpp  Function.cpp  GlobalVariable.cpp  IRBuilder.cpp  Instruction.cpp  Type.cpp
cpp/src/Parser/: CMakeLists.txt  SysYFBaseVisitor.cpp  SysYFLexer.cpp  SysYFParser.cpp  SysYFVisitor.cpp
grammar/: sysyf.lark
python/src/: main.py
python/src/sysyf_ast/: ast.py  builder.py  printer.py
src/: main.py
src/sysyf_ast/: ast.py  builder.py  printer.py  visitor.py
src/sysyf_ir/: builder.py
src/sysyf_parser/: sysyf_parser.py
test/: irgen_test.py
test/Easy/: 07_const_array_defn.sy
test/Hard/: bitset.sy  fft.sy
test/Medium/: big_int_mul.sy  brainfk.sy  int_literal.sy  long_array.sy  while_break_test.sy
