[project]
name = "sysyf_ir"
version = "0.1.0"
requires-python = ">= 3.10"
dependencies = [
    "llvmlite"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
